Apps_deployment/Api-Group/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: app-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      imagePullSecrets:
      - name: my-registry-creds
      containers:
      - name: api-service
        image: 192.168.8.142:5000/api-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: 
          requests:
            cpu: "100m"
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
