Apps_deployment/Api-Group/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: app-services
  labels:
    app: api-service
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: http
