Apps_deployment/Api-Group/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
  namespace: app-services
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m" 
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://webportal.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.local
    secretName: api-tls-secret
  rules:
  - host: api.local
    http:
      paths:
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8081
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8081
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8081
